--- a/src/pages/backend-article-write/style.less
+++ b/src/pages/backend-article-write/style.less
@@ -1,7 +1,6 @@
 @import "../../assets/less/mixins/variable.less";
 
 .admin-write-wrap {
-    margin-top: 20px;
     input,
     select {
         width: 200px;
@@ -12,6 +11,7 @@
         border: 1px solid @colorGreyLight;
         outline: none;
         .border-radius;
+        vertical-align: middle;
     }
     input {
         padding: 0 10px;
