--- a/src/pages/wordpress-detail/style.less
+++ b/src/pages/wordpress-detail/style.less
@@ -1,28 +1,72 @@
 @import "../../assets/less/mixins/variable";
 
 .wordpress-detail-wrap {
-    margin-top: 80px;
-}
-.wordpress-detail-wrap .detail-content {
-    background-color: #fff;
-    padding: 20px;
-    padding-bottom: 1000px;
-}
-.wordpress-detail-wrap .fixed-side-card {
-    position: fixed;
-    top: 80px;
-    width: 100%;
-    max-width: @pageMaxWidthLg * 15 / 60 - 20;
-    @media screen and (max-width: @screen-md) {
-        max-width: @pageMaxWidthMd * 17 / 60 - 20;
+    .detail-header {
+        margin-top: -20px;
+        margin-bottom: 20px;
+
+        background: no-repeat @colorInfo url(../../assets/images/2016.jpg) center center;
+        background-size: cover;
+        .grade-wrap {
+
+        }
+        .title-wrap {
+            padding-top: 10%;
+            padding-bottom: 15%;
+            //text-align: center;
+        }
+        .title {
+            font-size: 56px;
+            font-weight: 700;
+            line-height: 1.2;
+            margin-bottom: 10px;
+            color: #fff;
+            text-shadow: 0 0 15px rgba(0,0,0,.2);
+            @media screen and (max-width: @screen-md) {
+                font-size: 56px;
+            }
+            @media (min-width: @screen-sm) and (max-width: @pageMaxWidthMd) {
+                font-size: 48px;
+            }
+            @media screen and (max-width: @screen-sm) {
+                font-size: 36px;
+            }
+            @media screen and (max-width: @screen-xs) {
+                font-size: 24px;
+            }
+        }
     }
-    @media (min-width: @screen-sm) and (max-width: @pageMaxWidthMd) {
-        max-width: calc(28.2% - 20px)
+
+    .detail-poster-wrap {
+        padding: 20px;
+        margin: 0 auto;
+        border: 10px solid #fff;
+        img {
+            width: 100%;
+        }
     }
-    @media screen and (max-width: @screen-sm) {
-        max-width: @pageMaxWidthSm * 20 / 60 - 20;
+
+    .detail-content {
+        background-color: #fff;
+        padding: 20px;
     }
-    @media screen and (max-width: @screen-xs) {
-        max-width: @pageMaxWidthXs * 60 / 60 - 20;
+
+    .fixed-side-card {
+        position: fixed;
+        top: 80px;
+        width: 100%;
+        max-width: @pageMaxWidthLg * 15 / 60 - 20;
+        @media screen and (max-width: @screen-md) {
+            max-width: @pageMaxWidthMd * 17 / 60 - 20;
+        }
+        @media (min-width: @screen-sm) and (max-width: @pageMaxWidthMd) {
+            max-width: calc(28.2% - 20px)
+        }
+        @media screen and (max-width: @screen-sm) {
+            max-width: @pageMaxWidthSm * 20 / 60 - 20;
+        }
+        @media screen and (max-width: @screen-xs) {
+            max-width: @pageMaxWidthXs * 60 / 60 - 20;
+        }
     }
 }
