添加分类菜单

--- a/src/pages/search/style.less
+++ b/src/pages/search/style.less
@@ -1,2 +1,10 @@
+@import "../../assets/less/mixins/variable";
+
 .page-search-wrap {
+    .search-tip {
+        padding: 12px 20px;
+        margin-bottom: 20px;
+        font-size: 28px;
+        background-color: #fff;
+    }
 }
