--- a/src/components/card-md-nav/style.less
+++ b/src/components/card-md-nav/style.less
@@ -11,6 +11,6 @@
     height: 28px;
     width: 100%;
     border-right: 4px solid @colorSuccess;
-    background-color: lighten(@colorSilver, 2%); ;
+    background-color: lighten(@colorSilver, 2%);
     transition: top .25s ease;
 }
