--- a/src/components/header-bar/style.less
+++ b/src/components/header-bar/style.less
@@ -9,11 +9,11 @@
     background-color: rgba(255,255,255,.9);
     .box-shadow(0, 1px, 5px ,0, rgba(0,0,0,.09));
     &.header-bar-black {
-        background-color: @colorHeavy;
-        color: #fff;
-        .nav-bread {
-            color: #fff;
-        }
+        //background-color: @colorHeavy;
+        //color: #fff;
+        //.nav-bread {
+        //    color: #fff;
+        //}
     }
     .nav-bread {
         margin-right: 30px;
