--- a/src/pages/wordpress/style.less
+++ b/src/pages/wordpress/style.less
@@ -1,4 +1,10 @@
 .wordpress-wrap {
+    .search-tip {
+        padding: 12px 20px;
+        margin-bottom: 20px;
+        font-size: 28px;
+        background-color: #fff;
+    }
     .btn-more {
         margin-bottom: 20px;
     }
