--- a/src/assets/less/mixins/btn.less
+++ b/src/assets/less/mixins/btn.less
@@ -7,9 +7,9 @@
     font-size: 12px;
     line-height: 1.5;
     text-decoration: none !important;
-    border-radius: 3px;
     border: 1px solid @borderColor;
     cursor: pointer;
+    .border-radius;
     &:last-child {
         margin-right: 0;
     }
@@ -20,6 +20,11 @@
 
     &-full {
         width: 100%;
+        margin-right: 0;
+        margin-bottom: 10px;
+        &:last-child {
+            margin-bottom: 0;
+        }
     }
 
     &-default {
