--- a/src/assets/less/mixins/universal.less
+++ b/src/assets/less/mixins/universal.less
@@ -123,6 +123,27 @@ img {
     }
 }
 
+/*===== 滑到一定高度 固定 =====*/
+.fixed-side-card {
+    position: fixed;
+    top: 80px;
+    width: 100%;
+    max-width: @pageMaxWidthLg * 15 / 60 - 20;
+    @media screen and (max-width: @screen-md) {
+        max-width: @pageMaxWidthMd * 17 / 60 - 20;
+    }
+    @media (min-width: @screen-sm) and (max-width: @pageMaxWidthMd) {
+        max-width: calc(28.2% - 20px)
+    }
+    @media screen and (max-width: @screen-sm) {
+        max-width: @pageMaxWidthSm * 20 / 60 - 20;
+    }
+    @media screen and (max-width: @screen-xs) {
+        position: static;
+        max-width: @pageMaxWidthXs * 60 / 60 - 20;
+    }
+}
+
 /* loader */
 
 @colors: hsla(337, 84%, 48%, 0.75), hsla(160, 50%, 48%, 0.75), hsla(190, 61%, 65%, 0.75), hsla( 41, 82%, 52%, 0.75);;
