添加前端资源配置，添加标签

--- a/src/assets/less/mixins/universal.less
+++ b/src/assets/less/mixins/universal.less
@@ -164,6 +164,7 @@ img {
     position: fixed;
     top: 80px;
     width: 100%;
+    overflow: auto;
     max-width: @pageMaxWidthLg * 15 / 60 - 20;
     @media screen and (max-width: @screen-md) {
         max-width: @pageMaxWidthMd * 17 / 60 - 20;
