--- a/src/components/md-editor/style.less
+++ b/src/components/md-editor/style.less
@@ -30,7 +30,7 @@
     }
     .editor-write {
         position: relative;
-        z-index: 10;
+        //z-index: 10;
         min-height: 400px;
         background-color: #fff;
         border-right: 1px solid @colorGreyLight;
