--- a/src/pages/backend-article-write/style.less
+++ b/src/pages/backend-article-write/style.less
@@ -26,10 +26,8 @@
         width: 100%;
         font-size: 18px;
     }
-    .tag {
-        width: 240px;
-    }
     .poster {
-        width: 300px;
+        margin-top: 10px;
+        width: 100%;
     }
 }
